# gradient_metrics

./: .buildinfo  .flake8  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  documentation.html  example.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  setup.py  tox.ini
.github/: changelog-config.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gh-pages.yml  lint.yml  publish-to-pypi.yml  publish-to-testpypi.yml  release.yml  test.yml
_sources/: documentation.rst.txt  example.rst.txt
docs/source/: conf.py  documentation.rst  index.rst
examples/: simple_example.py
gradient_metrics/: __init__.py  general.py  metrics.py
tests/: test_general.py  test_metrics.py
